--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,8 @@ before_install:
     - bash tools/travis-install-protoc.sh 3.2.0
     - export PATH=/tmp/proto3.2.0/bin:$PATH
     - pip install -r requirements.txt
+    - pip install -r dev-requirements.txt
+    - flake8 *.py
 script:
     - cwltool
+    - sh tools/prepare_swagger.sh
