Add setup, restructure python Makes the package pip installable and moves the client to the ga4gh namespace. Hack constraints so that it installs the bravado package in both setup py and pip installs. Move controllers to their own namespace to make them easier to handle

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+# swagger in the python directory
+python/ga4gh/dos/data_objects_service.swagger.json
