Improve server implementation Add tests, FIXME the subprocess for the server does not kill properly

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_install:
 - pip install . --process-dependency-links
 - pip install -r python/dev-requirements.txt
 script:
+- nosetests python
 - flake8 python
 - ga4gh_dos_client
 deploy:
