--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Don't include the python package's copy of the swagger
+python/ga4gh/dos/data_object_service.swagger.yaml
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
