--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 before_install:
 - sudo apt-get update -qq
 - pip install . --process-dependency-links
-- pip install -r python/dev-requirements.txt
+- pip install -r requirements.txt
 script:
 - nosetests python/
 - flake8 --select=E121,E123,E126,E226,E24,E704,W503,W504 --ignore=E501 python/
