--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,13 @@ branches:
 stages:
   - linting
   - test
-  - deploy
+  # The deploy stage only has `deploy` actions which will only run on commits to master
+  # (and not pull requests). That said, we still explicitly skip this stage because
+  # if we don't, Travis will only stop execution once the build stage has already been
+  # set up. If we skip the deploy stage for pull requests at the stage level, we can
+  # shave off a couple minutes of runtime.
+  - name: deploy
+    if: type != pull_request
 
 jobs:
   include:
