trying to avoid copying unnecessary files that cause gh-pages to break

--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ jobs:
       deploy:
         provider: pages
         skip-cleanup: true
+        local_dir: node_modules
         github-token: $GITHUB_TOKEN
         on:
           all_branches: true
