--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# need to comment out otherwise the swagger js libs don't get copied in the gh-pages deploy
+#lib/
 lib64/
 parts/
 sdist/
