I think this is better, we only deploy when the branch is master. I need to check with Natan and see if this will work for release tags (which we do want deployed to PyPI).

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ stages:
   # set up. If we skip the deploy stage for pull requests at the stage level, we can
   # shave off a couple minutes of runtime.
   - name: deploy
-    if: type != pull_request && branch != "develop"
+    if: type != pull_request && branch = "master"
 
 jobs:
   include:
