--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ jobs:
       - "bash ./scripts/fetchpages.sh"
       - "sh ./gradlew installSwagger buildSwagger asciidoctor"
       - "bash ./scripts/stagepages.sh"
+      if: branch != gh-pages
       deploy:
         provider: pages
         skip-cleanup: true
