remove methods that are out of scope for DRS v1 (#233)
* remove create/update/delete and version methods

* remove calls to Create methods

We might want to delete the compliance test completely now that we don't have Create methods, but this should at least get the script to run.

* don't test removed methods

* remove more tests

At this point, it's pretty clear we should rethink testing completely.

* trying again to disable tests

* remove tests

Since they don't make sense now that we only have a read-only API

* restore original version

* undo edits

* comment out tests (instead of deleting them)

* remove ListBundles and ListObjects methods

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ branches:
 
 stages:
   - linting
-  - test
+#  - test
   # The deploy stage only has `deploy` actions which will only run on commits to master
   # (and not pull requests). That said, we still explicitly skip this stage because
   # if we don't, Travis will only stop execution once the build stage has already been
@@ -78,5 +78,5 @@ before_install:
 
 script:
 - make schemas
-- nosetests python/
+#- nosetests python/
 - ga4gh_drs_client
