updating travis to get release branches to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ branches:
   - develop
   - "/^\\d+\\.\\d+(\\.\\d+)?(-\\S*)?$/"
   - "/^feature\\/issue-\\d+(-\\S*)?$/"
+  - "/^release\\/\\d+\\.\\d+(\\.\\d+)?$/"
 stages:
 - linting
 - test
