--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ branches:
     - develop
     - /^\d+\.\d+(\.\d+)?(-\S*)?$/
     - /^feature\/issue-\d+(-\S*)?$/
+    - "/^release\\/\\d+\\.\\d+(\\.\\d+)?$/"
 
 stages:
   - linting
