--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,8 @@ jobs:
       - "./scripts/stagepages.sh"
       deploy:
         provider: pages
-        skip-cleanup: true
+        skip_cleanup: true
+        keep_history: true
         github-token: $GITHUB_TOKEN
         on:
           all_branches: true
