reformat reference in main DRS spec to avoid duplicate model generation in bundle step, HTML table for "motivation" section

--- a/openapi/components/responses/200OkAccess.yaml
+++ b/openapi/components/responses/200OkAccess.yaml
@@ -2,4 +2,4 @@ description: The `AccessURL` was found successfully
 content:
   application/json:
     schema:
-      $ref: '#/components/schemas/AccessURL'
+      $ref: '../schemas/AccessURL.yaml'
