--- a/openapi/components/responses/404NotFoundAccess.yaml
+++ b/openapi/components/responses/404NotFoundAccess.yaml
@@ -2,4 +2,4 @@ description: The requested `AccessURL` wasn't found.
 content:
   application/json:
     schema:
-      $ref: '#/components/schemas/Error'
+      $ref: '../schemas/Error.yaml'
