--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
         - "12"
       before_script:
         - npm install -g @redocly/openapi-cli && npm install -g redoc-cli
-        - npm install -g gh-openapi-docs
+        - npm install -g @ga4gh/gh-openapi-docs@0.2.2-rc3
       script:
         - gh-openapi-docs
       deploy:
