trying to have an endpoint support both get and post

--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -63,7 +63,8 @@ post:
     content:
       multipart/form-data:
         schema:
-          - properties:
+          type: object
+          properties:
             tokens[]:
               type: array
               items:
