trying to have an endpoint support both get and post

--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -64,9 +64,10 @@ post:
       multipart/form-data:
         schema:
           type: object
-          properties:
-            tokens[]:
-              type: array
-              items:
-                type: string
-              description: the encoded JWT GA4GH Passport that contains embedded Visas.  The overall JWT is signed as are the individual Passport Visas.
+          tokens:
+            properties:
+              tokens[]:
+                type: array
+                items:
+                  type: string
+                description: the encoded JWT GA4GH Passport that contains embedded Visas.  The overall JWT is signed as are the individual Passport Visas.
