trying to have an endpoint support both get and post

--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -64,8 +64,8 @@ post:
       multipart/form-data:
         schema:
           type: object
-          tokens:
-            properties:
+          properties:
+            tokens[]:
               type: array
               items:
                 type: string
