--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -5,7 +5,7 @@ get:
 
     This method only needs to be called when using an `AccessMethod` that contains an `access_id`
     (e.g., for servers that use signed URLs for fetching object bytes).
-  operationId: PostAccessURL
+  operationId: GetAccessURL
   responses:
     200:
       $ref: '../components/responses/200OkAccess.yaml'
@@ -37,6 +37,8 @@ post:
 
     Method is a POST to accomodate a JWT GA4GH Passport sent in the formData in order to authorize access.
   operationId: PostAccessURL
+  security:
+    - PassportAuth: []
   responses:
     200:
       $ref: '../components/responses/200OkAccess.yaml'
