--- a/openapi/components/responses/200ServiceInfo.yaml
+++ b/openapi/components/responses/200ServiceInfo.yaml
@@ -4,4 +4,4 @@ content:
     schema:
       allOf:
         - '$ref': https://raw.githubusercontent.com/ga4gh-discovery/ga4gh-service-info/v1.0.0/service-info.yaml#/components/schemas/Service
-        - '$ref': '../schemas/DrsServiceInfo.yaml'
+        - '$ref': '../schemas/DrsService.yaml'
