bulk operations prototyping

--- a/openapi/components/responses/200OkDrsObjects.yaml
+++ b/openapi/components/responses/200OkDrsObjects.yaml
@@ -1,4 +1,4 @@
-description: The `DrsObject` was found successfully
+description: The `DrsObjects` were found successfully
 content:
   application/json:
     schema:
