--- a/openapi/paths/bulkobjects@{object_id}@access.yaml
+++ b/openapi/paths/bulkobjects@{object_id}@access.yaml
@@ -5,7 +5,7 @@ get:
 
     This method only needs to be called when using an `AccessMethod` that contains an `access_id`
     (e.g., for servers that use signed URLs for fetching object bytes).
-  operationId: GetAccessURL
+  operationId: GetBulkAccessURL
   parameters:
     - $ref: '../components/parameters/ObjectId.yaml'
     - $ref: '../components/parameters/AccessId.yaml'
