--- a/openapi/paths/bulkobjects@{object_id}.yaml
+++ b/openapi/paths/bulkobjects@{object_id}.yaml
@@ -2,9 +2,8 @@ post:
   summary: Get info about multiple DrsObjects.
   description: >-
     Returns an array of object metadata, and a list of access methods that can be used to fetch objects' bytes.
-  operationId: GetBulkObject
+  operationId: GetBulkObjects
   parameters:
-    - $ref: '../components/parameters/ObjectId.yaml'
     - $ref: '../components/parameters/Expand.yaml'
   responses:
     200:
