bulk operations prototyping

--- a/openapi/paths/bulkobjects@{object_id}.yaml
+++ b/openapi/paths/bulkobjects@{object_id}.yaml
@@ -33,6 +33,5 @@ post:
             objectids:
               type: array
               items:
-                type:
-                  $ref: '../components/parameters/ObjectId.yaml'
+                type: string
               description: An array of ObjectIds
