--- a/openapi/components/responses/200OkDrsObjects.yaml
+++ b/openapi/components/responses/200OkDrsObjects.yaml
@@ -7,5 +7,4 @@ content:
         drsobjects:
           type: array
           items:
-            type:
-              $ref: '../schemas/DrsObject.yaml'
+            type: string
