bulk operations prototyping

--- a/openapi/paths/bulkobjects@{object_id}.yaml
+++ b/openapi/paths/bulkobjects@{object_id}.yaml
@@ -33,5 +33,5 @@ post:
             objectids:
               type: array
               items:
-                type: string
+                $ref: '../components/parameters/ObjectId.yaml'
               description: An array of ObjectIds
