--- a/openapi/components/responses/200OkDrsObjects.yaml
+++ b/openapi/components/responses/200OkDrsObjects.yaml
@@ -7,4 +7,4 @@ content:
         drsobjects:
           type: array
           items:
-            type: string
+            $ref: '../schemas/DrsObject.yaml'
