bulk operations prototyping

--- a/openapi/paths/bulkobjects@access@{access_id}.yaml
+++ b/openapi/paths/bulkobjects@access@{access_id}.yaml
@@ -1,7 +1,7 @@
 post:
-  summary: Get a URL for fetching bytes
+  summary: Get a URLs for fetching bytes from multiple objects
   description: >-
-    Returns a URL that can be used to fetch the bytes of a `DrsObject`.
+    Returns an array of URL objects that can be used to fetch the bytes of multiple `DrsObject`s.
 
     This method only needs to be called when using an `AccessMethod` that contains an `access_id`
     (e.g., for servers that use signed URLs for fetching object bytes).
@@ -11,7 +11,7 @@ post:
     - $ref: '../components/parameters/AccessId.yaml'
   responses:
     200:
-      $ref: '../components/responses/200OkAccess.yaml'
+      $ref: '../components/responses/200OkAccesses.yaml'
     202:
       $ref: '../components/responses/202Accepted.yaml'
     400:
@@ -27,3 +27,15 @@ post:
   tags:
     - Objects
   x-swagger-router-controller: ga4gh.drs.server
+  requestBody:
+    required: true
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            object_ids:
+              type: array
+              items:
+                $ref: '../components/parameters/BulkObjectId.yaml'
+              description: An array of ObjectIDs
