--- a/openapi/paths/bulkobjects@access@{access_id}.yaml
+++ b/openapi/paths/bulkobjects@access@{access_id}.yaml
@@ -1,5 +1,5 @@
 post:
-  summary: Get a URLs for fetching bytes from multiple objects
+  summary: Get URLs for fetching bytes from multiple objects
   description: >-
     Returns an array of URL objects that can be used to fetch the bytes of multiple `DrsObject`s.
 
@@ -34,4 +34,7 @@ post:
           type: object
           properties:
             object_ids:
-              type: string
+              type: array
+              items:
+                $ref: '../components/parameters/BulkObjectId.yaml'
+              description: An array of ObjectIDs
