updated to application/json from multipart, renamed tokens

--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -63,11 +63,11 @@ post:
   requestBody:
     required: true
     content:
-      multipart/form-data:
+      application/json:
         schema:
           type: object
           properties:
-            tokens[]:
+            tokens:
               type: array
               items:
                 type: string
