updated to passports instead of tokens

--- a/openapi/paths/objects@{object_id}.yaml
+++ b/openapi/paths/objects@{object_id}.yaml
@@ -62,7 +62,7 @@ post:
         schema:
           type: object
           properties:
-            tokens:
+            passports:
               type: array
               items:
                 type: string
