--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -67,7 +67,7 @@ post:
         schema:
           type: object
           properties:
-            tokens:
+            passports:
               type: array
               items:
                 type: string
