added "Link" header and "page" query parameter for paginated traversal of contents

--- a/openapi/paths/objects@{object_id}.yaml
+++ b/openapi/paths/objects@{object_id}.yaml
@@ -6,6 +6,7 @@ get:
   parameters:
     - $ref: '../components/parameters/ObjectId.yaml'
     - $ref: '../components/parameters/Expand.yaml'
+    - $ref: '../components/parameters/ContentsPage.yaml'
   responses:
     200:
       $ref: '../components/responses/200OkDrsObject.yaml'
