--- a/openapi/paths/objects@{object_id}@access@{access_id}.yaml
+++ b/openapi/paths/objects@{object_id}@access@{access_id}.yaml
@@ -60,5 +60,6 @@ post:
   parameters:
     - $ref: '../components/parameters/ObjectId.yaml'
     - $ref: '../components/parameters/AccessId.yaml'
+    - $ref: '../components/parameters/Params.yaml'
   requestBody:
     $ref: '../components/requestBodies/Passports.yaml'
