--- a/openapi/paths/bulkobjects@access@{access_id}.yaml
+++ b/openapi/paths/bulkobjects@access@{access_id}.yaml
@@ -33,8 +33,8 @@ post:
         schema:
           type: object
           properties:
-            object_ids:
+            selection:
               type: array
               items:
-                $ref: '../components/parameters/BulkObjectId.yaml'
-              description: An array of ObjectIDs
+                $ref: '../components/parameters/BulkObjectAccessId.yaml'
+              description: An array of ObjectIDs paired with their access IDs
