--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
   docs-build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: pre-flight testing
         run: |
             pwd
