--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: pre-flight testing
-        run: |
-            pwd
-            ls
-      - name: pull docker image
+      - name: Docker Pull 🐳
         run: |
           docker pull ga4gh/gh-openapi-docs:0.2.2-rc3
-      - name: run gh-openapi-docs
+      - name: Build Docs 🔧
         run: |
           docker run --name docs-builder --rm -v `pwd`:/docs ga4gh/gh-openapi-docs:0.2.2-rc3
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.2.2
+        with:
+          branch: gh-pages
+          folder: .
