--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
+          keep_files: true
       # - name: Deploy 🚀
       #   uses: JamesIves/github-pages-deploy-action@v4.2.2
       #   with:
