--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           pwd
           ls
+          ls preview
           git status
           git add -A
           git status
