--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,22 +29,25 @@ jobs:
         run: |
           pwd
           ls
+          echo "***"
           ls publish
+          echo "***"
           ls publish/preview/support
+          echo "***"
           ls publish/preview/support/issue-378-migrate-to-github-actions
+          echo "***"
           ls publish/preview/support/issue-378-migrate-to-github-actions/docs
-          git status
-          git add -A
-          git status
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3.7.3
+          echo "***"
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: publish
-          # keep_files: true
-      # - name: Deploy 🚀
-      #   uses: JamesIves/github-pages-deploy-action@v4.2.2
+          branch: gh-pages
+          folder: publish
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3.7.3
       #   with:
-      #     branch: gh-pages
-      #     folder: preview
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: publish
+      #     # keep_files: true
+      
 
