--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Inspect Pre-Build
+        run: |
+          pwd
+          ls -a
       - name: Docker Pull 🐳
         run: |
           docker pull ga4gh/gh-openapi-docs:0.2.3-rc1
       - name: Build Docs 🔧
         run: |
           docker run --name docs-builder --rm -v `pwd`:/docs ga4gh/gh-openapi-docs:0.2.3-rc1
-      - name: Inspect Test
+      - name: Inspect Post-Build
         run: |
           pwd
           ls
