--- a/openapi/paths/objects@{object_id}@contents.yaml
+++ b/openapi/paths/objects@{object_id}@contents.yaml
@@ -1,14 +1,17 @@
 get:
-  summary: Get info about a DrsObject.
+  summary: Get contents array of a DrsObject bundle
   description: >-
-    Returns object metadata, and a list of access methods that can be used to fetch object bytes.
-  operationId: GetObject
+    Returns the `contents` array of a DrsObject bundle. Large arrays may be
+    paginated for efficient transfer, in which case, a `Link` header will be
+    provided to support client page traversal.
+  operationId: GetObjectContents
   parameters:
     - $ref: '../components/parameters/ObjectId.yaml'
     - $ref: '../components/parameters/Expand.yaml'
+    - $ref: '../components/parameters/ContentsPage.yaml'
   responses:
     200:
-      $ref: '../components/responses/200OkDrsObject.yaml'
+      $ref: '../components/responses/200OkContentsArray.yaml'
     202:
       $ref: '../components/responses/202Accepted.yaml'
     400:
@@ -26,12 +29,15 @@ get:
   x-swagger-router-controller: ga4gh.drs.server
 
 post:
-  summary: Get info about a DrsObject through POST'ing a Passport.
+  summary: Get contents array of a DrsObject bundle
   description: >-
-    Returns object metadata, and a list of access methods that can be used to fetch object bytes.
+    Returns the `contents` array of a DrsObject bundle. Large arrays may be
+    paginated for efficient transfer, in which case, a `Link` header will be
+    provided to support client page traversal.
 
-    Method is a POST to accomodate a JWT GA4GH Passport sent in the formData in order to authorize access.
-  operationId: PostObject
+    POST method accomodates JWT GA4GH Passport sent in the request body in order
+    to authorize access.
+  operationId: GetObjectContentsPost
   parameters:
     - $ref: '../components/parameters/ObjectId.yaml'
   requestBody:
@@ -40,7 +46,7 @@ post:
     - PassportAuth: []
   responses:
     200:
-      $ref: '../components/responses/200OkDrsObject.yaml'
+      $ref: '../components/responses/200OkContentsArray.yaml'
     202:
       $ref: '../components/responses/202Accepted.yaml'
     400:
@@ -50,10 +56,9 @@ post:
     403:
       $ref: '../components/responses/403Forbidden.yaml'
     404:
-      $ref: '../components/responses/404NotFoundAccess.yaml'
+      $ref: '../components/responses/404NotFoundDrsObject.yaml'
     500:
       $ref: '../components/responses/500InternalServerError.yaml'
   tags:
     - Objects
   x-swagger-router-controller: ga4gh.drs.server
-
