--- a/openapi/paths/objects@{object_id}.yaml
+++ b/openapi/paths/objects@{object_id}.yaml
@@ -1,3 +1,25 @@
+options:
+  summary: Get Authorization info about a DrsObject.
+  description: >-
+    Returns a list of `Authorizations` that can be used to determine how to resolve and fetch object bytes.
+  operationId: OptionsObject
+  parameters:
+    - $ref: '../components/parameters/ObjectId.yaml'
+  responses:
+    200:
+      $ref: '../components/responses/200OkAuthorizations.yaml'
+    400:
+      $ref: '../components/responses/400BadRequest.yaml'
+    404:
+      $ref: '../components/responses/404NotFoundDrsObject.yaml'
+    405:
+      $ref: '../components/responses/405NotSupportedAuthorizations.yaml'
+    500:
+      $ref: '../components/responses/500InternalServerError.yaml'
+  tags:
+    - Objects
+  x-swagger-router-controller: ga4gh.drs.server
+
 get:
   summary: Get info about a DrsObject.
   description: >-
