syntax fixes and add authorizations to AccessURL

--- a/openapi/components/responses/200OkAuthorizations.yaml
+++ b/openapi/components/responses/200OkAuthorizations.yaml
@@ -1,4 +1,4 @@
-description: `Authorizations` were found successfully
+description: "`Authorizations` were found successfully"
 content:
   application/json:
     schema:
