--- a/openapi/components/responses/405NotSupportedAuthorizations.yaml
+++ b/openapi/components/responses/405NotSupportedAuthorizations.yaml
@@ -1,1 +1,1 @@
-description: `Authorizations` are not supported for this object. Default to `None`.
+description: "`Authorizations` are not supported for this object. Default to `None`."
