--- a/openapi/components/schemas/AccessURL.yaml
+++ b/openapi/components/schemas/AccessURL.yaml
@@ -13,3 +13,4 @@ properties:
       An optional list of headers to include in the HTTP request to `url`.
       These headers can be used to provide auth tokens required to fetch the object bytes.
     example: 'Authorization: Basic Z2E0Z2g6ZHJz'
+  $ref: 'AuthorizationsProperties.yaml'
