working on bulk schema changes

--- a/openapi/components/parameters/BulkObjectAccessId.yaml
+++ b/openapi/components/parameters/BulkObjectAccessId.yaml
@@ -1,10 +1,14 @@
-name: bulk_object_access_id
-required: true
-description: '`DrsObject` identifier and access ids'
-schema:
-  type: object
-  properties:
-    object_id:
-      type: string
-    access_id:
-      type: string
+type: object
+description: The object that contains object_id/access_id tuples
+properties:
+  bulk_object_access_ids:
+    type: array
+    items:
+      type: object
+      properties:
+        bulk_object_id:
+          type: string
+        bulk_access_ids:
+          type: array
+          items:
+            type: string
