--- a/openapi/components/schemas/unresolved.yaml
+++ b/openapi/components/schemas/unresolved.yaml
@@ -1,4 +1,13 @@
 type: object
- description: Error codes for each unresolved drs objects.
- additionalProperties:
-   type: integer
+description: Error codes for each unresolved drs objects.
+properties:
+  type: array
+  items:
+    type: object
+    properties:
+      error_code:
+        type: integer
+      object_ids:
+        type: array
+        items:
+          type: string
