--- a/openapi/components/responses/200OkDrsObjects.yaml
+++ b/openapi/components/responses/200OkDrsObjects.yaml
@@ -5,13 +5,9 @@ content:
       type: object
       properties:
         summary:
-          type: object
-          items:
-            $ref: '../schemas/summary.yaml'
-        unresolved_drs_object:
-          type: object
-          items:
-            $ref: '../schemas/unresolved.yaml'
+          $ref: '../schemas/summary.yaml'
+        unresolved_drs_objects:
+          $ref: '../schemas/unresolved.yaml'
         resolved_drs_object:
           type: array
           items:
