--- a/openapi/components/responses/200OkAccesses.yaml
+++ b/openapi/components/responses/200OkAccesses.yaml
@@ -7,4 +7,4 @@ content:
         access_urls:
           type: array
           items:
-            $ref: '../schemas/BulkAccessURL.yaml'
+            $ref: '../schemas/BulkObjectSingleAccessURL.yaml'
